styled shop now button

--- a/main.css
+++ b/main.css
@@ -76,3 +76,18 @@ ul {
     /* To push it a bit futher from the Microsoft Logo */
     margin-left: 20px;
 }
+
+.btn {
+    cursor: pointer;
+    display: inline-block;
+    border: 0;
+    font-weight: bold;
+    padding: 10px 20px; 
+    background: #262626;
+    color: #fff;
+    font-size: 15px;
+}
+
+.btn:hover {
+    opacity: 0.9;
+}
