finished styling showcase

--- a/main.css
+++ b/main.css
@@ -91,3 +91,25 @@ ul {
 .btn:hover {
     opacity: 0.9;
 }
+
+/* Showcase */
+.showcase {
+    width: 100%;
+    height: 400px;
+    background: url('assets/RE3Wknw.jpg') no-repeat center center/cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: flex-end;
+    padding-bottom: 50px;
+    margin-bottom: 20px;
+}
+
+.showcase h2, .showcase p {
+    margin-bottom: 10px;
+}
+
+.showcase .btn {
+    margin-top: 20px;
+}
