--- a/main.css
+++ b/main.css
@@ -96,7 +96,7 @@ ul {
 .showcase {
     width: 100%;
     height: 400px;
-    background: url('assets/RE3Wknw.jpg') no-repeat center center/cover;
+    background: url('assets/slide1.png') no-repeat center center/cover;
     display: flex;
     flex-direction: column;
     align-items: center;
