--- a/main.css
+++ b/main.css
@@ -113,3 +113,31 @@ ul {
 .showcase .btn {
     margin-top: 20px;
 }
+
+/* Home Cards */
+/* Home Cards 1 */
+.home-cards {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1rem;
+}
+
+.home-cards img {
+    margin-bottom: 20px;
+}
+
+.home-cards h3 {
+    margin-bottom: 5px;
+}
+
+.home-cards a {
+    display: inline-block;
+    padding-top: 10px;
+    color: #0067b8;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.home-cards a:hover i {
+    margin-left: 10px;
+}
