--- a/main.css
+++ b/main.css
@@ -120,6 +120,7 @@ ul {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 1rem;
+    margin-bottom: 40px;
 }
 
 .home-cards img {
@@ -140,4 +141,20 @@ ul {
 
 .home-cards a:hover i {
     margin-left: 10px;
+}
+
+/* Xbox */
+.xbox {
+    width: 100%;
+    height: 350px;
+    background: url('assets/xbox.png') no-repeat center center/cover;
+}
+
+.xbox .content {
+    width: 40%;
+    padding: 50px 0 0 30px;
+}
+
+.xbox p {
+    margin: 10 0 20px;
 }
