--- a/main.css
+++ b/main.css
@@ -148,6 +148,7 @@ ul {
     width: 100%;
     height: 350px;
     background: url('assets/xbox.png') no-repeat center center/cover;
+    margin-bottom: 20px;
 }
 
 .xbox .content {
