--- a/main.css
+++ b/main.css
@@ -92,6 +92,15 @@ ul {
     opacity: 0.9;
 }
 
+.dark {
+    color: #fff;
+}
+
+.dark .btn {
+    background: #f4f4f4;
+    color: #333;
+}
+
 /* Showcase */
 .showcase {
     width: 100%;
@@ -156,7 +165,7 @@ ul {
     padding: 50px 0 0 30px;
 }
 
-.xbox p {
+.xbox p, .carbon p {
     margin: 10 0 20px;
 }
 
