--- a/main.css
+++ b/main.css
@@ -193,3 +193,30 @@ ul {
 .follow * {
     margin-right: 10px;
 }
+
+/* Links */
+.links {
+    background: #f2f2f2;
+    color: #616161;
+    font-size: 12px;
+    padding: 35px 0;
+}
+
+.links-inner {
+    max-width: 1100px;
+    /* Margin auto makes sure that the content stays in the middle */ 
+    margin: 0 auto;
+    padding:0 20px;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 10px;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.links li {
+    line-height: 2.8;
+}
+
+/* Footer */
+
