--- a/main.css
+++ b/main.css
@@ -256,6 +256,7 @@ ul {
     margin-bottom: 20px;
 }
 
+/* Media queries for smaller screens */
 @media(max-width: 700px) {
     .home-cards {
         grid-template-columns: repeat(2, 1fr);
@@ -266,6 +267,30 @@ ul {
     }
 
     .xbox .content h2 {
+        margin-bottom: 20px;
+    }
+
+    .carbon .content {
+        width: 85%
+    }
+
+    .links .links-inner {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media(max-width: 500px) {
+    .home-cards {
+        /* We dont need no repeat since we are using one fractional unit */
+        grid-template-columns: 1fr;
+    }
+
+    .links .links-inner {
+        /* We dont need no repeat since we are using one fractional unit */
+        grid-template-columns: 1fr;
+    }
+
+    .links .links-inner ul {
         margin-bottom: 20px;
     }
 }
