created menu-btn html content

--- a/main.css
+++ b/main.css
@@ -77,6 +77,18 @@ ul {
     margin-left: 20px;
 }
 
+.menu-btn {
+    cursor: pointer;
+    /* To take it out of the flow of everything else and position it absolute */
+    position: absolute;
+    /* To position it 20px from the top */ 
+    top: 20px;
+    /* To position it 30px from the right */ 
+    right: 30px;
+    z-index: 2;
+    display: none;
+}
+
 .btn {
     cursor: pointer;
     display: inline-block;
