--- a/main.css
+++ b/main.css
@@ -270,6 +270,49 @@ ul {
 
 /* Media queries for smaller screens */
 @media(max-width: 700px) {
+    .menu-btn {
+    display: block;
+    }
+
+    .menu-btn:hover {
+        /* To make it fade a little when you hover */
+        opacity: 0.5;
+    }
+
+    .main-nav ul.right-menu {
+        margin-right: 50px;
+    }
+
+    .main-nav ul.main-menu {
+        display: block;
+        /* To take it out of the relative flow */
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: #f2f2f2;
+        width: 50%;
+        height: 100%;
+        border-right: #ccc 1px solid;
+        /* To give it that see through look */
+        opacity: 0.9;
+        padding: 30px;
+        transform: translateX(-500px);
+    }
+
+    .main-nav ul.main-menu li {
+        padding: 10px;
+        border-bottom: #ccc solid 1px;
+        font-size: 14px;
+    }
+
+    .main-nav ul.main-menu li:last-child {
+        border-bottom: 0;
+    }
+
+    .main-nav ul.main-menu.show {
+        transform: translateX(-20px);
+    }
+
     .home-cards {
         grid-template-columns: repeat(2, 1fr);
     }
